--- a/web/index.html
+++ b/web/index.html
@@ -15,18 +15,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Ristek Universitas Indonesia Ulas Kelas project">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="ulaskelas">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/logo.png">
 
   <title>ulaskelas</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body style="margin: 0; padding: 0; min-height: 100%;">
-  <iframe src="index2.html" style="position:absolute; margin-left: calc(50% - 250px); margin-right:0; background-color: black; text-align:center; display: block; height: 100%" width="500" frameborder="0" height="100%"></iframe>
+  <iframe src="index2.html" style="position:absolute; margin-left: calc(50% - 250px); margin-right:0; text-align:center; display: block; height: 100%" width="500" frameborder="0" height="100%"></iframe>
 </body>
 </html>
