--- a/web/index2.html
+++ b/web/index2.html
@@ -21,7 +21,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="ulaskelas">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/logo.png">
 
   <title>ulaskelas</title>
   <link rel="manifest" href="manifest.json">
